pyquest/tests/parsing/valid/test008.ql
// Form with two questions with different identifiers
form label {
  "Question?"
    var1: boolean

  "Question?"
    var2: boolean
}
