pyquest/tests/parsing/invalid/test018.ql
// Empty if conditional
form label {
    if () {
        "Question?"
        id : boolean
    }
}